# s3-provider-comparison

./: .gitignore  README.md  pyproject.toml
docs/: access-mechanisms.md
examples/: wasabi_credential_vending.py
src/s3bench/: __init__.py  benchmark.py  cli.py  config.py  features.py  providers.py  rclone.py  s5cmd.py
terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/azure/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_benchmark.py  test_cli_history.py  test_config.py  test_providers.py
